# pycti-mcp

./: .gitignore  README.md  local_settings.py.sample  mcp_server_octi.py  pyproject.toml
.github/workflows/: pypi-publish.yaml  uv-tests.yaml
pycti_tools/: __init__.py  local_settings.py.sample  lookup_adversary.py  lookup_observables.py  lookup_reports.py
src/pycti_mcp/: mcp_server_octi.py
src/pycti_mcp/pycti_tools/: __init__.py  lookup_adversary.py  lookup_indicators.py  lookup_observables.py  lookup_reports.py
tests/: tools_list.txt
